@@ -3,77 +3,72 @@ package com.intellij.codeInsight.daemon.impl.quickfix;
 
 import com.intellij.codeInsight.daemon.QuickFixBundle;
 import com.intellij.codeInsight.intention.FileModifier;
-import com.intellij.codeInsight.intention.choice.ChoiceTitleIntentionAction;
-import com.intellij.codeInsight.intention.choice.ChoiceVariantIntentionAction;
-import com.intellij.codeInsight.intention.choice.DefaultIntentionActionWithChoice;
-import com.intellij.codeInspection.LocalQuickFix;
 import com.intellij.codeInspection.util.IntentionFamilyName;
-import com.intellij.codeInspection.util.IntentionName;
-import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.NlsContexts;
+import com.intellij.modcommand.*;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.psi.*;
 import com.intellij.psi.search.searches.DirectClassInheritorsSearch;
-import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.util.Query;
-import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
-public class ExtendSealedClassFix implements DefaultIntentionActionWithChoice {
+public class ExtendSealedClassFix extends PsiBasedModCommandAction<PsiClass> {
   @FileModifier.SafeFieldForPreview private final SmartPsiElementPointer<PsiClass> myParentClassPointer;
-  @FileModifier.SafeFieldForPreview private final SmartPsiElementPointer<PsiClass> mySubclassPointer;
-  private final @Nls String myName;
 
-  private ExtendSealedClassFix(PsiClass parentClass, PsiClass subclass) {
+  private ExtendSealedClassFix(@NotNull PsiClass parentClass, @NotNull PsiClass subclass) {
+    super(subclass);
     myParentClassPointer = SmartPointerManager.createPointer(parentClass);
-    mySubclassPointer = SmartPointerManager.createPointer(subclass);
-    int extendsImplements = subclass.isInterface() || !parentClass.isInterface() ? 1 : 2;
-    myName = QuickFixBundle.message("extend.sealed.title", subclass.getName(), extendsImplements, parentClass.getName());
   }
 
   @Override
-  public @NotNull ChoiceTitleIntentionAction getTitle() {
-    return new ChoiceTitleIntentionAction(QuickFixBundle.message("implement.or.extend.fix.family"), myName);
+  public @NotNull String getFamilyName() {
+    return QuickFixBundle.message("implement.or.extend.fix.family");
   }
 
   @Override
-  public @NotNull List<@NotNull ChoiceVariantIntentionAction> getVariants() {
-    PsiClass subclass = mySubclassPointer.getElement();
+  protected @Nullable Presentation getPresentation(@NotNull ActionContext context, @NotNull PsiClass subclass) {
     PsiClass parentClass = myParentClassPointer.getElement();
-    if (subclass == null || parentClass == null) return Collections.emptyList();
+    if (parentClass == null) return null;
+    int extendsImplements = subclass.isInterface() || !parentClass.isInterface() ? 1 : 2;
+    String name = QuickFixBundle.message("extend.sealed.name", subclass.getName(), extendsImplements, parentClass.getName());
+    return Presentation.of(name);
+  }
+
+  @Override
+  protected @NotNull ModCommand perform(@NotNull ActionContext context, @NotNull PsiClass subclass) {
+    PsiClass parentClass = myParentClassPointer.getElement();
+    if (parentClass == null) return ModCommand.nop();
     boolean parentIsInterface = parentClass.isInterface();
     boolean subclassIsInterface = subclass.isInterface();
-    if (!parentIsInterface && subclassIsInterface) return Collections.emptyList();
+    if (!parentIsInterface && subclassIsInterface) return ModCommand.nop();
+    List<ModCommandAction> fixes;
     if (subclassIsInterface) {
-      return Arrays.asList(new ExtendSealedClassVariantAction(0, PsiModifier.SEALED, myParentClassPointer, mySubclassPointer),
-                           new ExtendSealedClassVariantAction(1, PsiModifier.NON_SEALED, myParentClassPointer, mySubclassPointer));
+      fixes = List.of(new ExtendSealedClassVariantAction(PsiModifier.SEALED, myParentClassPointer, subclass),
+                      new ExtendSealedClassVariantAction(PsiModifier.NON_SEALED, myParentClassPointer, subclass));
     }
-    return Arrays.asList(new ExtendSealedClassVariantAction(0, PsiModifier.FINAL, myParentClassPointer, mySubclassPointer),
-                         new ExtendSealedClassVariantAction(1, PsiModifier.SEALED, myParentClassPointer, mySubclassPointer),
-                         new ExtendSealedClassVariantAction(2, PsiModifier.NON_SEALED, myParentClassPointer, mySubclassPointer));
+    else {
+      fixes = List.of(new ExtendSealedClassVariantAction(PsiModifier.FINAL, myParentClassPointer, subclass),
+                      new ExtendSealedClassVariantAction(PsiModifier.SEALED, myParentClassPointer, subclass),
+                      new ExtendSealedClassVariantAction(PsiModifier.NON_SEALED, myParentClassPointer, subclass));
+    }
+    int extendsImplements = subclass.isInterface() || !parentClass.isInterface() ? 1 : 2;
+    //noinspection DialogTitleCapitalization
+    String name = QuickFixBundle.message("extend.sealed.title", subclass.getName(), extendsImplements, parentClass.getName());
+    return ModCommand.chooseAction(name, fixes);
   }
 
   /**
    * @return fixes or null if given case is not supported (but probably valid)
    */
-  static LocalQuickFix @Nullable [] createFixes(@NotNull PsiClass parentClass, @NotNull PsiClass subclass) {
+  static @Nullable ModCommandAction createFix(@NotNull PsiClass parentClass, @NotNull PsiClass subclass) {
     if (!parentClass.hasModifierProperty(PsiModifier.SEALED) || !parentClass.getManager().isInProject(parentClass)) return null;
     boolean parentIsInterface = parentClass.isInterface();
     if (parentIsInterface && (subclass.isRecord() || subclass.isEnum())) return null;
     PsiModifierList modifiers = subclass.getModifierList();
     if (modifiers == null || hasSealedClassSubclassModifier(modifiers)) return null;
-    ExtendSealedClassFix extendSealedClassFix = new ExtendSealedClassFix(parentClass, subclass);
-    List<LocalQuickFix> actions = new ArrayList<>();
-    actions.add(extendSealedClassFix.getTitle());
-    actions.addAll(extendSealedClassFix.getVariants());
-    return actions.toArray(LocalQuickFix.EMPTY_ARRAY);
+    return new ExtendSealedClassFix(parentClass, subclass);
   }
 
   private static boolean hasSealedClassSubclassModifier(PsiClass psiClass) {
@@ -88,30 +83,21 @@ public class ExtendSealedClassFix implements DefaultIntentionActionWithChoice {
            modifiers.hasExplicitModifier(PsiModifier.NON_SEALED);
   }
 
-  private static class ExtendSealedClassVariantAction extends ChoiceVariantIntentionAction {
-
-    private final int myIndex;
+  private static class ExtendSealedClassVariantAction extends PsiUpdateModCommandAction<PsiClass> {
     private final @NlsSafe String myModifier;
     private final SmartPsiElementPointer<PsiClass> myParentClassPointer;
-    private final SmartPsiElementPointer<PsiClass> mySubclassPointer;
 
-    private ExtendSealedClassVariantAction(int index, @NotNull String modifier,
+    private ExtendSealedClassVariantAction(@NotNull String modifier,
                                            SmartPsiElementPointer<PsiClass> parentClassPointer,
-                                           SmartPsiElementPointer<PsiClass> subclassPointer) {
-      myIndex = index;
+                                           PsiClass subclass) {
+      super(subclass);
       myModifier = modifier;
       myParentClassPointer = parentClassPointer;
-      mySubclassPointer = subclassPointer;
     }
 
     @Override
-    public int getIndex() {
-      return myIndex;
-    }
-
-    @Override
-    public @IntentionName @NotNull String getName() {
-      return myModifier;
+    protected @Nullable Presentation getPresentation(@NotNull ActionContext context, @NotNull PsiClass element) {
+      return Presentation.of(myModifier);
     }
 
     @Override
@@ -120,21 +106,9 @@ public class ExtendSealedClassFix implements DefaultIntentionActionWithChoice {
     }
 
     @Override
-    public @NlsContexts.Tooltip String getTooltipText() {
-      return getFamilyName() + " " + myModifier;
-    }
-
-    @Override
-    public @Nullable PsiElement getElementToMakeWritable(@NotNull PsiFile currentFile) {
-      return mySubclassPointer.getContainingFile();
-    }
-
-    @Override
-    public void applyFix(@NotNull Project project, PsiFile file, @Nullable Editor editor) {
+    protected void invoke(@NotNull ActionContext context, @NotNull PsiClass subclass, @NotNull ModPsiUpdater updater) {
       PsiClass parentClass = myParentClassPointer.getElement();
       if (parentClass == null || !parentClass.hasModifierProperty(PsiModifier.SEALED)) return;
-      PsiClass subclass = mySubclassPointer.getElement();
-      if (subclass == null) return;
       if (ImplementOrExtendFix.implementOrExtend(parentClass, subclass) == null) return;
       PsiModifierList modifiers = subclass.getModifierList();
       if (modifiers == null) return;
@@ -145,14 +119,6 @@ public class ExtendSealedClassFix implements DefaultIntentionActionWithChoice {
           PsiModifier.SEALED.equals(myModifier) && subclassInheritors.anyMatch(child -> !hasSealedClassSubclassModifier(child))) {
         subclass.navigate(true);
       }
-    }
-
-    @Override
-    public @Nullable FileModifier getFileModifierForPreview(@NotNull PsiFile target) {
-      PsiClass subclass = mySubclassPointer.getElement();
-      PsiClass copy = PsiTreeUtil.findSameElementInCopy(subclass, target);
-      if (copy == null) return null;
-      return new ExtendSealedClassVariantAction(myIndex, myModifier, myParentClassPointer, SmartPointerManager.createPointer(copy));
     }
   }
 }
