@@ -1,7 +1,6 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.actions;
 
-import com.intellij.diagnostic.LoadingState;
 import com.intellij.execution.ExecutionException;
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.process.CapturingProcessHandler;
@@ -10,7 +9,6 @@ import com.intellij.execution.util.ExecUtil;
 import com.intellij.ide.IdeBundle;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationType;
-import com.intellij.notification.Notifications;
 import com.intellij.openapi.actionSystem.ActionUpdateThread;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.application.ApplicationBundle;
@@ -27,6 +25,7 @@ import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.ui.AppUIUtil;
+import com.intellij.ui.AppUIUtilKt;
 import com.intellij.util.ExceptionUtil;
 import com.intellij.util.Restarter;
 import org.jetbrains.annotations.Nls;
@@ -38,14 +37,13 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
 public final class CreateDesktopEntryAction extends DumbAwareAction {
   private static final Logger LOG = Logger.getInstance(CreateDesktopEntryAction.class);
 
   public static boolean isAvailable() {
-    return SystemInfo.isXWindow && !ExternalUpdateManager.isRoaming() && SystemInfo.hasXdgOpen();
+    return SystemInfo.isUnix && !SystemInfo.isMac && !ExternalUpdateManager.isCreatingDesktopEntries() && SystemInfo.hasXdgOpen();
   }
 
   @Override
@@ -76,16 +74,19 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
         try {
           createDesktopEntry(globalEntry);
 
-          String message = ApplicationBundle.message("desktop.entry.success", ApplicationNamesInfo.getInstance().getProductName());
-          Notifications.Bus.notify(
-            new Notification(Notifications.SYSTEM_MESSAGES_GROUP_ID, IdeBundle.message("notification.title.desktop.entry.created"), message, NotificationType.INFORMATION),
-            getProject());
+          var title = IdeBundle.message("notification.title.desktop.entry.created");
+          var message = ApplicationBundle.message("desktop.entry.success", ApplicationNamesInfo.getInstance().getProductName());
+          new Notification("System Messages", title, message, NotificationType.INFORMATION).notify(getProject());
         }
         catch (Exception e) {
           reportFailure(e, getProject());
         }
       }
     }.queue();
+  }
+
+  public static @NotNull String getDesktopEntryName() {
+    return AppUIUtil.INSTANCE.getFrameClass() + ".desktop";
   }
 
   public static void createDesktopEntry(boolean globalEntry) throws Exception {
@@ -104,12 +105,11 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
     }
   }
 
-  public static void reportFailure(@NotNull Exception e, @Nullable final Project project) {
+  private static void reportFailure(Exception e, @Nullable Project project) {
     LOG.warn(e);
-    final String message = ExceptionUtil.getNonEmptyMessage(e, IdeBundle.message("notification.content.internal error"));
-    Notifications.Bus.notify(
-      new Notification(Notifications.SYSTEM_MESSAGES_GROUP_ID, IdeBundle.message("notification.title.desktop.entry.creation.failed"), message, NotificationType.ERROR),
-      project);
+    var title = IdeBundle.message("notification.title.desktop.entry.creation.failed");
+    var message = ExceptionUtil.getNonEmptyMessage(e, IdeBundle.message("notification.content.internal error"));
+    new Notification("System Messages", title, message, NotificationType.ERROR).notify(project);
   }
 
   private static void check() throws ExecutionException, InterruptedException {
@@ -121,7 +121,7 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
     String binPath = PathManager.getBinPath();
     assert new File(binPath).isDirectory() : "Invalid bin path: '" + binPath + "'";
 
-    String iconPath = AppUIUtil.findIcon();
+    String iconPath = AppUIUtilKt.findAppIcon();
     if (iconPath == null) {
       throw new RuntimeException(ApplicationBundle.message("desktop.entry.icon.missing", binPath));
     }
@@ -136,10 +136,10 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
 
     String name = names.getFullProductNameWithEdition();
     String comment = StringUtil.notNullize(names.getMotto(), name);
-    String wmClass = AppUIUtil.getFrameClass();
+    String wmClass = AppUIUtil.INSTANCE.getFrameClass();
     Map<String, String> vars = Map.of("$NAME$", name, "$SCRIPT$", execPath, "$ICON$", iconPath, "$COMMENT$", comment, "$WM_CLASS$", wmClass);
     String content = ExecUtil.loadTemplate(CreateDesktopEntryAction.class.getClassLoader(), "entry.desktop", vars);
-    Path entryFile = Paths.get(PathManager.getTempPath(), wmClass + ".desktop");
+    Path entryFile = Path.of(PathManager.getTempPath(), getDesktopEntryName());
     Files.writeString(entryFile, content);
     return entryFile;
   }
@@ -165,28 +165,19 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
 
   private static void exec(GeneralCommandLine command, @Nls @Nullable String prompt) throws IOException, ExecutionException {
     command.setRedirectErrorStream(true);
-    ProcessOutput result = prompt != null ? execAndGetOutputWithWizardSupport(ExecUtil.sudoCommand(command, prompt)): execAndGetOutputWithWizardSupport(command);
+    ProcessOutput result = new CapturingProcessHandler(prompt != null ? ExecUtil.sudoCommand(command, prompt) : command).runProcess();
     int exitCode = result.getExitCode();
     if (exitCode != 0) {
       String message = "Command '" + (prompt != null ? "sudo " : "") + command.getCommandLineString() + "' returned " + exitCode;
       String output = result.getStdout();
-      if (!StringUtil.isEmptyOrSpaces(output)) message += "\nOutput: " + output.trim();
+      if (!output.isBlank()) message += "\nOutput: " + output.trim();
       throw new RuntimeException(message);
     }
   }
 
-  private static ProcessOutput execAndGetOutputWithWizardSupport(GeneralCommandLine cmd) throws ExecutionException {
-    return new CapturingProcessHandler(cmd) {
-      @Override
-      public boolean hasPty() {
-        if (!LoadingState.COMPONENTS_REGISTERED.isOccurred()) return false;
-        return super.hasPty();
-      }
-    }.runProcess();
-  }
-
-  public static class CreateDesktopEntryDialog extends DialogWrapper {
+  public static final class CreateDesktopEntryDialog extends DialogWrapper {
     private static final @NlsSafe String APP_NAME_PLACEHOLDER = "$APP_NAME$";
+
     private JPanel myContentPane;
     private JLabel myLabel;
     private JCheckBox myGlobalEntryCheckBox;
