@@ -1,11 +1,10 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.plugins;
 
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.util.BuildNumber;
 import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.util.text.Strings;
 import com.intellij.testFramework.PlatformTestUtil;
@@ -88,15 +87,15 @@ public class PluginManagerTest {
   @Test
   public void ignoredCompatibility() {
     TriConsumer<String, String, String> checkCompatibility = (String ideVersion, String sinceBuild, String untilBuild) -> {
-      boolean ignoreCompatibility = PluginManagerCore.isIgnoreCompatibility();
+      boolean ignoreCompatibility = PluginManagerCore.isIgnoreCompatibility;
       try {
         assertIncompatible(ideVersion, sinceBuild, untilBuild);
 
-        PluginManagerCore.setIgnoreCompatibility(true);
+        PluginManagerCore.isIgnoreCompatibility = true;
         assertCompatible(ideVersion, sinceBuild, untilBuild);
       }
       finally {
-        PluginManagerCore.setIgnoreCompatibility(ignoreCompatibility);
+        PluginManagerCore.isIgnoreCompatibility = ignoreCompatibility;
       }
     };
 
@@ -141,7 +140,7 @@ public class PluginManagerTest {
     assertEquals(SystemInfo.isFreeBSD, checkCompatibility("com.intellij.platform.freebsd"));
     assertEquals(SystemInfo.isSolaris, checkCompatibility("com.intellij.platform.solaris"));
     assertEquals(SystemInfo.isUnix, checkCompatibility("com.intellij.platform.unix"));
-    assertEquals(SystemInfo.isXWindow, checkCompatibility("com.intellij.platform.xwindow"));
+    assertEquals(SystemInfo.isUnix && !SystemInfo.isMac, checkCompatibility("com.intellij.platform.xwindow"));
   }
 
   @Test
@@ -162,25 +161,21 @@ public class PluginManagerTest {
      doPluginSortTest("simplePluginSort", false);
   }
 
-  /**
-
+  /*
    Actual result:
-
    HTTP Client (main)
    Endpoints (main)
    HTTP Client (intellij.restClient.microservicesUI, depends on Endpoints)
 
    Expected:
-
    Endpoints (main)
    HTTP Client (main)
    HTTP Client (intellij.restClient.microservicesUI, depends on Endpoints)
 
    But graph is correct - HTTP Client (main) it is node that doesn't depend on Endpoints (main),
-   so, no reason for DFSTBuilder to put it after.
-
-   See CachingSemiGraph.getSortedPlugins for solution
-   */
+   so no reason for DFSTBuilder to put it after.
+   See CachingSemiGraph.getSortedPlugins for a solution.
+  */
   @Test
   public void moduleSort() throws Exception {
      doPluginSortTest("moduleSort", true);
@@ -193,22 +188,21 @@ public class PluginManagerTest {
 
   @Test
   public void testModulePluginIdContract() {
-    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
-    IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath, true);
-    PluginSet pluginSet = new PluginSetBuilder(Set.of(descriptorBundled))
-      .createPluginSetWithEnabledModulesMap();
+    var pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
+    var descriptorBundled = loadDescriptorInTest(pluginsPath, true);
+    var pluginSet = new PluginSetBuilder(Set.of(descriptorBundled)).createPluginSetWithEnabledModulesMap();
 
-    PluginId moduleId = PluginId.getId("foo.bar");
-    PluginId corePlugin = PluginId.getId("my.plugin");
+    var moduleId = PluginId.getId("foo.bar");
+    var corePlugin = PluginId.getId("my.plugin");
     assertThat(pluginSet.findEnabledPlugin(moduleId).getPluginId()).isEqualTo(corePlugin);
   }
 
   @Test
   public void testIdentifyPreInstalledPlugins() {
-    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
-    IdeaPluginDescriptorImpl bundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), true);
-    IdeaPluginDescriptorImpl updated = loadDescriptorInTest(pluginsPath.resolve("updated"));
-    PluginId expectedPluginId = updated.getPluginId();
+    var pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
+    var bundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), true);
+    var updated = loadDescriptorInTest(pluginsPath.resolve("updated"));
+    var expectedPluginId = updated.getPluginId();
     assertEquals(expectedPluginId, bundled.getPluginId());
 
     assertPluginPreInstalled(expectedPluginId, bundled, updated);
@@ -219,25 +213,24 @@ public class PluginManagerTest {
   public void testSymlinkInConfigPath() throws IOException {
     assumeSymLinkCreationIsSupported();
 
-    Path configPath = tempDir.getRoot().toPath().resolve("config-link");
-    @NotNull Path target = tempDir.newDirectory("config-target").toPath();
+    var configPath = tempDir.getRoot().toPath().resolve("config-link");
+    var target = tempDir.newDirectory("config-target").toPath();
     Files.createSymbolicLink(configPath, target);
-    DisabledPluginsState.Companion.saveDisabledPluginsAndInvalidate(configPath, "a");
+    DisabledPluginsState.Companion.saveDisabledPluginsAndInvalidate(configPath, List.of("a"));
     assertThat(configPath.resolve(DisabledPluginsState.DISABLED_PLUGINS_FILENAME)).hasContent("a" + System.lineSeparator());
   }
 
-  private static void assertPluginPreInstalled(@NotNull PluginId expectedPluginId,
-                                               IdeaPluginDescriptorImpl... descriptors) {
-    PluginLoadingResult loadingResult = createPluginLoadingResult();
-    loadingResult.addAll(Arrays.asList(descriptors), false, BuildNumber.fromString("2042.42"));
+  private static void assertPluginPreInstalled(PluginId expectedPluginId, IdeaPluginDescriptorImpl... descriptors) {
+    var loadingResult = createPluginLoadingResult();
+    loadingResult.addAll(List.of(descriptors));
     assertTrue("Plugin should be pre installed", loadingResult.shadowedBundledIds.contains(expectedPluginId));
   }
 
   private static void doPluginSortTest(String testDataName, boolean isBundled) throws IOException, XMLStreamException {
-    PluginManagerCore.getAndClearPluginLoadingErrors();
-    PluginManagerState loadPluginResult = loadAndInitializeDescriptors(testDataName + ".xml", isBundled);
-    StringBuilder text = new StringBuilder();
-    for (IdeaPluginDescriptorImpl descriptor : loadPluginResult.pluginSet.getEnabledModules()) {
+    PluginManagerCore.INSTANCE.getAndClearPluginLoadingErrors();
+    var loadPluginResult = loadAndInitializeDescriptors(testDataName + ".xml", isBundled);
+    var text = new StringBuilder();
+    for (var descriptor : loadPluginResult.pluginSet.getEnabledModules()) {
       text.append(descriptor.isEnabled() ? "+ " : "  ").append(descriptor.getPluginId().getIdString());
       if (descriptor.moduleName != null) {
         text.append(" | ").append(descriptor.moduleName);
@@ -245,7 +238,7 @@ public class PluginManagerTest {
       text.append('\n');
     }
     text.append("\n\n");
-    for (HtmlChunk html : PluginManagerCore.getAndClearPluginLoadingErrors()) {
+    for (var html : PluginManagerCore.INSTANCE.getAndClearPluginLoadingErrors()) {
       text.append(html.toString().replace("<br/>", "\n").replace("&#39;", "")).append('\n');
     }
     UsefulTestCase.assertSameLinesWithFile(new File(getTestDataPath(), testDataName + ".txt").getPath(), text.toString());
@@ -255,26 +248,21 @@ public class PluginManagerTest {
     assertEquals(result, PluginManager.convertExplicitBigNumberInUntilBuildToStar(untilBuild));
   }
 
-  private static void assertIncompatible(@NotNull String ideVersion,
-                                         @Nullable String sinceBuild,
-                                         @Nullable String untilBuild) {
+  private static void assertIncompatible(String ideVersion, @Nullable String sinceBuild, @Nullable String untilBuild) {
     assertNotNull(checkCompatibility(ideVersion, sinceBuild, untilBuild));
   }
 
-  private static @Nullable PluginLoadingError checkCompatibility(@NotNull String ideVersion,
-                                                                 @Nullable String sinceBuild,
-                                                                 @Nullable String untilBuild) {
+  private static @Nullable PluginLoadingError checkCompatibility(String ideVersion, @Nullable String sinceBuild, @Nullable String untilBuild) {
     IdeaPluginDescriptor mock = EasyMock.niceMock(IdeaPluginDescriptor.class);
     expect(mock.getSinceBuild()).andReturn(sinceBuild).anyTimes();
     expect(mock.getUntilBuild()).andReturn(untilBuild).anyTimes();
     expect(mock.getDependencies()).andReturn(Collections.emptyList()).anyTimes();
     replay(mock);
 
-    return PluginManagerCore.checkBuildNumberCompatibility(mock,
-                                                           Objects.requireNonNull(BuildNumber.fromString(ideVersion)));
+    return PluginManagerCore.checkBuildNumberCompatibility(mock, Objects.requireNonNull(BuildNumber.fromString(ideVersion)));
   }
 
-  private static boolean checkCompatibility(@NotNull String platformId) {
+  private static boolean checkCompatibility(String platformId) {
     IdeaPluginDependency platformDependencyMock = EasyMock.niceMock(IdeaPluginDependency.class);
     expect(platformDependencyMock.getPluginId()).andReturn(PluginId.getId(platformId));
     replay(platformDependencyMock);
@@ -288,30 +276,19 @@ public class PluginManagerTest {
     return PluginManagerCore.checkBuildNumberCompatibility(mock, BuildNumber.fromString("145")) == null;
   }
 
-  private static void assertCompatible(@NotNull String ideVersion,
-                                       @Nullable String sinceBuild,
-                                       @Nullable String untilBuild) {
+  private static void assertCompatible(String ideVersion, @Nullable String sinceBuild, @Nullable String untilBuild) {
     assertNull(checkCompatibility(ideVersion, sinceBuild, untilBuild));
   }
 
-  private static PluginManagerState loadAndInitializeDescriptors(String testDataName, boolean isBundled)
-    throws IOException, XMLStreamException {
-    Path file = Path.of(getTestDataPath(), testDataName);
-    BuildNumber buildNumber = BuildNumber.fromString("2042.42");
-    DescriptorListLoadingContext parentContext = new DescriptorListLoadingContext(Set.of(),
-                                                                                  Set.of(),
-                                                                                  Set.of(),
-                                                                                  Map.of(),
-                                                                                  () -> buildNumber,
-                                                                                  false,
-                                                                                  false,
-                                                                                  false,
-                                                                                  false);
+  private static PluginManagerState loadAndInitializeDescriptors(String testDataName, boolean isBundled) throws IOException, XMLStreamException {
+    var file = Path.of(getTestDataPath(), testDataName);
+    var buildNumber = BuildNumber.fromString("2042.42");
+    var parentContext = new DescriptorListLoadingContext(Set.of(), Set.of(), Map.of(), () -> buildNumber, false, false, false, false);
 
-    XmlElement root = XmlDomReader.readXmlAsModel(Files.newInputStream(file));
-    Ref<Boolean> autoGenerateModuleDescriptor = new Ref<>(false);
-    Map<String, XmlElement> moduleMap = new HashMap<>();
-    PathResolver pathResolver = new PathResolver() {
+    var root = XmlDomReader.readXmlAsModel(Files.newInputStream(file));
+    var autoGenerateModuleDescriptor = new Ref<>(false);
+    var moduleMap = new HashMap<String, XmlElement>();
+    var pathResolver = new PathResolver() {
       @Override
       public boolean isFlat() {
         return false;
@@ -331,9 +308,9 @@ public class PluginManagerTest {
                                                       @NotNull DataLoader dataLoader,
                                                       @NotNull String relativePath,
                                                       @Nullable RawPluginDescriptor readInto) {
-        for (XmlElement child : root.children) {
+        for (var child : root.children) {
           if (child.name.equals("config-file-idea-plugin")) {
-            String url = Objects.requireNonNull(child.getAttributeValue("url"));
+            var url = Objects.requireNonNull(child.getAttributeValue("url"));
             if (url.endsWith("/" + relativePath)) {
               try {
                 return XmlReader.readModuleDescriptor(elementAsBytes(child), readContext, this, dataLoader, null, readInto, null);
@@ -353,7 +330,7 @@ public class PluginManagerTest {
                                                             @NotNull String path,
                                                             @Nullable RawPluginDescriptor readInto) {
         if (autoGenerateModuleDescriptor.get() && path.startsWith("intellij.")) {
-          XmlElement element = moduleMap.get(path);
+          var element = moduleMap.get(path);
           if (element != null) {
             try {
               return XmlReader.readModuleDescriptorForTest(elementAsBytes(element));
@@ -365,27 +342,26 @@ public class PluginManagerTest {
 
           assert readInto == null;
           // auto-generate empty descriptor
-          return XmlReader.readModuleDescriptorForTest(("<idea-plugin package=\"" + path + "\"></idea-plugin>")
-                                                         .getBytes(StandardCharsets.UTF_8));
+          return XmlReader.readModuleDescriptorForTest(("<idea-plugin package=\"" + path + "\"></idea-plugin>").getBytes(StandardCharsets.UTF_8));
         }
         return resolvePath(readContext, dataLoader, path, readInto);
       }
     };
 
-    for (XmlElement element : root.children) {
-      String moduleFile = element.attributes.get("moduleFile");
+    for (var element : root.children) {
+      var moduleFile = element.attributes.get("moduleFile");
       if (moduleFile != null) {
         moduleMap.put(moduleFile, element);
       }
     }
 
-    List<IdeaPluginDescriptorImpl> list = new ArrayList<>();
-    for (XmlElement element : root.children) {
+    var list = new ArrayList<IdeaPluginDescriptorImpl>();
+    for (var element : root.children) {
       if (!element.name.equals("idea-plugin")) {
         continue;
       }
 
-      String url = element.getAttributeValue("url");
+      var url = element.getAttributeValue("url");
       Path pluginPath;
       if (url == null) {
         XmlElement id = element.getChild("id");
@@ -400,62 +376,57 @@ public class PluginManagerTest {
       else {
         pluginPath = Path.of(Strings.trimStart(Objects.requireNonNull(url), "file://"));
       }
-      IdeaPluginDescriptorImpl descriptor = PluginDescriptorTestKt.createFromDescriptor(pluginPath,
-                                                                                        isBundled,
-                                                                                        elementAsBytes(element),
-                                                                                        parentContext,
-                                                                                        pathResolver,
-                                                                                        new LocalFsDataLoader(pluginPath));
+      var descriptor = PluginDescriptorTestKt.createFromDescriptor(
+        pluginPath, isBundled, elementAsBytes(element), parentContext, pathResolver, new LocalFsDataLoader(pluginPath));
       list.add(descriptor);
       descriptor.jarFiles = List.of();
     }
     parentContext.close();
-    PluginLoadingResult result = new PluginLoadingResult(false);
-    result.addAll(list, /* overrideUseIfCompatible = */ false, parentContext.productBuildNumber.invoke());
-    return PluginManagerCore.initializePlugins(parentContext, result, PluginManagerTest.class.getClassLoader(), /* checkEssentialPlugins = */ false, null);
+    var result = new PluginLoadingResult(false);
+    result.addAll(list);
+    return PluginManagerCore.INSTANCE.initializePlugins(parentContext, result, PluginManagerTest.class.getClassLoader(), false, null);
   }
 
-  private static byte @NotNull [] elementAsBytes(XmlElement child) throws XMLStreamException {
-    ByteArrayOutputStream byteOut = new ByteArrayOutputStream();
-    XMLStreamWriter writer = XMLOutputFactory.newDefaultFactory().createXMLStreamWriter(byteOut, "utf-8");
-    writeXmlElement(child, writer);
+  private static byte[] elementAsBytes(XmlElement child) throws XMLStreamException {
+    var byteOut = new ByteArrayOutputStream();
+    writeXmlElement(child, XMLOutputFactory.newDefaultFactory().createXMLStreamWriter(byteOut, "utf-8"));
     return byteOut.toByteArray();
   }
 
   private static void writeXmlElement(XmlElement element, XMLStreamWriter writer) throws XMLStreamException {
     writer.writeStartElement(element.name);
-    for (Map.Entry<String, String> entry : element.attributes.entrySet()) {
+    for (var entry : element.attributes.entrySet()) {
       writer.writeAttribute(entry.getKey(), entry.getValue());
     }
     if (element.content != null) {
       writer.writeCharacters(element.content);
     }
-    for (XmlElement child : element.children) {
+    for (var child : element.children) {
       writeXmlElement(child, writer);
     }
     writer.writeEndElement();
   }
 
-  /** @noinspection unused */
+  @SuppressWarnings("unused")
   private static String dumpDescriptors(IdeaPluginDescriptorImpl @NotNull [] descriptors) {
     // place breakpoint in PluginManagerCore#loadDescriptors before sorting
-    StringBuilder sb = new StringBuilder("<root>");
+    var sb = new StringBuilder("<root>");
     Function<String, String> escape = s -> {
       return s.equals("com.intellij") || s.startsWith("com.intellij.modules.") ? s : "-" + s.replace(".", "-") + "-";
     };
-    for (IdeaPluginDescriptorImpl d : descriptors) {
+    for (var d : descriptors) {
       sb.append("\n  <idea-plugin url=\"file://out/").append(d.getPluginPath().getFileName().getParent()).append("/META-INF/plugin.xml\">");
       sb.append("\n    <id>").append(escape.apply(d.getPluginId().getIdString())).append("</id>");
       sb.append("\n    <name>").append(StringUtil.escapeXmlEntities(d.getName())).append("</name>");
       for (PluginId module : d.modules) {
         sb.append("\n    <module value=\"").append(module.getIdString()).append("\"/>");
       }
-      for (PluginDependency dependency : d.pluginDependencies) {
+      for (var dependency : d.pluginDependencies) {
         if (!dependency.isOptional()) {
           sb.append("\n    <depends>").append(escape.apply(dependency.getPluginId().getIdString())).append("</depends>");
         }
         else {
-          IdeaPluginDescriptorImpl optionalConfigPerId = dependency.subDescriptor;
+          var optionalConfigPerId = dependency.subDescriptor;
           if (optionalConfigPerId == null) {
             sb.append("\n    <depends optional=\"true\" config-file=\"???\">")
               .append(escape.apply(dependency.getPluginId().getIdString()))
