@@ -1,19 +1,15 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.updater;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
-/**
- * @author Konstantin Bulenkov
- */
 public final class Bootstrap {
   /**
-   * This property allows applying patches without creating backups. In this case a callee is responsible for that.
+   * This property allows applying patches without creating backups (a callee is responsible for that).
    * Example: JetBrains Toolbox App copies a tool it wants to update and then applies the patch.
    */
   private static final String NO_BACKUP_PROPERTY = "no.backup";
@@ -32,7 +28,7 @@ public final class Bootstrap {
   private static void mainNoExceptionsCatch(String[] args) throws Exception {
     if (args.length != 1) throw new Exception("Expected one argument: path to application installation");
 
-    Path target = Paths.get(args[0]);
+    Path target = Path.of(args[0]);
     if (isMac() && target.getFileName().toString().endsWith(".app")) {
       Path inner = target.resolve("Contents");
       if (Files.isDirectory(inner)) {
@@ -44,10 +40,12 @@ public final class Bootstrap {
     List<String> runnerArgs = new ArrayList<>();
     runnerArgs.add("apply");
     runnerArgs.add(args[0]);
-    runnerArgs.add("--toolbox-ui");
+    runnerArgs.add("--force-replace");
     if (Boolean.getBoolean(NO_BACKUP_PROPERTY)) {
       runnerArgs.add("--no-backup");
     }
+
+    Locale.setDefault(Locale.ENGLISH);
 
     //noinspection SSBasedInspection
     Runner.main(runnerArgs.toArray(new String[0]));
